--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f78e588e690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ecf32c310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f78e58f9a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f78e55a27d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ece859ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ece859cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f78e5b98cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f78e5b635d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eceaac450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7eceaac650&gt;]</pre>
 </div>
 
 </div>
