--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b1aee2d10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f54bd984850&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b1af47a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b1af47c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54bceb2b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54bceb2d90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b1b1b2310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b1b1b2510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f54bd104490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f54bd104690&gt;]</pre>
 </div>
 
 </div>
