--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b8ed284d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1395198890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b8edaa9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6b8edaac10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f13945e6b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f13945e6d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b8f047610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6b8f012550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1394839490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1394839690&gt;]</pre>
 </div>
 
 </div>
