--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7b1dc86950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe7ceae5590&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b1e414890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b1e414a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7ceb62bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7ceb62dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b1e655290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7b1e655490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7cedb3550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7cedb3750&gt;]</pre>
 </div>
 
 </div>
