--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe7ceae5590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9a672bbd90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7ceb62bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe7ceb62dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9a66fbca90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9a66fbcc90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7cedb3550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe7cedb3750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9a672103d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9a672105d0&gt;]</pre>
 </div>
 
 </div>
