--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2ce73779d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70b982bb50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ce64aa250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2ce67aec50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70b8a28e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70b8d58d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ce6a5e490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2ce6a17590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70b8fe1f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70b8fac5d0&gt;]</pre>
 </div>
 
 </div>
