--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff423de7b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a749d23d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff423a9da90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff423a9dc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a74a24a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a74a24c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff424049490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff424049690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a74c8d350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a74c8d550&gt;]</pre>
 </div>
 
 </div>
