--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7844766f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd9a3a50890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7843c99950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7843c99b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9a3751910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9a3751b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7843eed250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7843eed450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9a39912d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd9a39914d0&gt;]</pre>
 </div>
 
 </div>
