--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd9a3a50890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b90e0a050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9a3751910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd9a3751b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b91227ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b91227cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd9a39912d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd9a39914d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b917d9450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b917d9650&gt;]</pre>
 </div>
 
 </div>
