--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6c2c44e0d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9ca7a07190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c2c152b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6c2c152d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ca7707b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9ca7707d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c2c3bb450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6c2c3bb650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ca7cc1510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9ca7cc1710&gt;]</pre>
 </div>
 
 </div>
