--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9ca7a07190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4f53fd7d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ca7707b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ca7707d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4f512ea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4f512ec50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ca7cc1510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ca7cc1710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4f56e3310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4f56e3510&gt;]</pre>
 </div>
 
 </div>
