--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fee88857dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f8b9e6a90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee88877ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee88877cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f8b6fb9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f8b6fbbd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fee88ade450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fee88ade650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f8b93b2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f8b93b4d0&gt;]</pre>
 </div>
 
 </div>
