--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00235771d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f37c663f310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f00229c8b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f00229c6d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f37c59dc990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f37c59dcb90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0022c04f90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0022c17690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f37c5c47310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f37c5c47510&gt;]</pre>
 </div>
 
 </div>
