--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fef28667b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb4ed4ea10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef286e8a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef286e8c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb4e2639d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb4e263c10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fef2893a390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fef2893a590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb4e4cd390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb4e4cd5d0&gt;]</pre>
 </div>
 
 </div>
