--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb4f0b5310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f24c8cac1d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb4ed7aa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb4ed7ac50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f24c81d9ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f24c81d9cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb4f335490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb4f335690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f24c842b4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f24c842b6d0&gt;]</pre>
 </div>
 
 </div>
