--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3ab3927990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a22160cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ab2e67b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ab2e67d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a228ee990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a228eeb10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ab30a6450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3ab30a6650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a22b2e350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5a22b2e4d0&gt;]</pre>
 </div>
 
 </div>
