--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f33b8639190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe8a1588b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f33b837eb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f33b837ed50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8a0aa3b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe8a0aa3d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f33b89294d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f33b89296d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8a0d0c490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe8a0d0c690&gt;]</pre>
 </div>
 
 </div>
