--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21730aba10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c5ff60dd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21730edb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21730edd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c6026d590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c60254d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21733404d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21733406d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c604b2310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c604bc610&gt;]</pre>
 </div>
 
 </div>
