--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2a7f0e8ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f728c368890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a7f0f4ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2a7f0f4cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f728b883a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f728b883c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2a7f9dcfd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2a7f993650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f728baec410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f728baec610&gt;]</pre>
 </div>
 
 </div>
