--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8684e42410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0fa53f5090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8684ec3b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8684ec3d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fa5404d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0fa5404f10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8685115450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8685115650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0fa5659650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0fa5659850&gt;]</pre>
 </div>
 
 </div>
