--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ef017f310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ddfd4f250&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eef6afb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7eef6afd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ddfdd3910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7ddfdd3b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7eef9014d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7eef9016d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7de0017290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7de0017490&gt;]</pre>
 </div>
 
 </div>
