--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd711f469d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c0834fdd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd71103ba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd71103bc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c08031a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c08031c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7115e7390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd7115e7590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c08299410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c08299610&gt;]</pre>
 </div>
 
 </div>
