--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6d12bf8250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76b7c048d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d12c6cbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6d12c6cdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76b7f33990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76b7f33b90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d12ebe5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6d12ebe7d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f76b8498310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f76b8498510&gt;]</pre>
 </div>
 
 </div>
