--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76b7c048d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e20cd8f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76b7f33990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76b7f33b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e209daad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e209dad10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76b8498310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76b8498510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e20c2b450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e20c2b690&gt;]</pre>
 </div>
 
 </div>
