--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcdbd550910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f105dd89110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcdbc9aba10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcdbc9b1b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f105d2c9a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f105d2c9c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcdbcbe5290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcdbcbf0550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f105d508410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f105d508610&gt;]</pre>
 </div>
 
 </div>
