--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f26f800a5d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faf0ebeec90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f26f7107a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f26f7107c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faf0f25fc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faf0f25fe90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f26f76ca350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f26f76ca550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faf0f4af590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faf0f4af790&gt;]</pre>
 </div>
 
 </div>
