--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76f1870310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4133609ad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76f123aa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76f123ac90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4132826b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4132826d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76f1aba450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76f1aba650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4132d89490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4132d89690&gt;]</pre>
 </div>
 
 </div>
