--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4c73c71f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe733457d10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4c742b4b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4c742b4cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe732984b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe732984d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4c7451e410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4c7451e5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe732bd7450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe732bd7650&gt;]</pre>
 </div>
 
 </div>
