--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe01f830210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2bf980ef10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe01f578b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe01f578d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bf98b48d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2bf98b4b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe01fb24590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe01fb24790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bf9af5210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2bf9af5450&gt;]</pre>
 </div>
 
 </div>
