--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbfbb1bc790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff0819cddd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfbae74bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfbae74dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff081a4ab90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff081a4ad90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbfbb41e510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbfbb41e710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff081c9f510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff081c9f710&gt;]</pre>
 </div>
 
 </div>
