--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e5c56b210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5ae2fd0290&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e5c617890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e5c617a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ae36139d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ae3613bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e5c858190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e5c858390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5ae387d2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5ae387d4d0&gt;]</pre>
 </div>
 
 </div>
