--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f71c0dc4550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe86934fa50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71c0ae9cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71c0ae9ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe8699a5c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe8699a5e10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71c1094590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71c1094790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe869bfa590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe869bfa790&gt;]</pre>
 </div>
 
 </div>
