--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9c07015190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1ff185b050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c0731d490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c07321f90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ff15648d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1ff1564ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9c079263d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9c078c0890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ff1b16310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1ff1b16510&gt;]</pre>
 </div>
 
 </div>
