--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda8ea7f310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c34e3e310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda8ed76d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda8ed76f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c344f1bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c344f1dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda8f5f2690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda8f5f2890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c34d6e590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5c34d6e790&gt;]</pre>
 </div>
 
 </div>
