--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9b739f8490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb073089bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b739b4d90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b739b4fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb072a13c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb072a13e90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9b73f59690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9b73f598d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb072fb9550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb072fb9790&gt;]</pre>
 </div>
 
 </div>
