--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d10494610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c48fd5dd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d0fe1cc10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8d0fe1ce10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c48ca8310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c48ca0f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d103c15d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8d103c17d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c4922db90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1c49248850&gt;]</pre>
 </div>
 
 </div>
