--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6eae56ced0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f095e7719d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6eae2b9e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6eae8850d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f095e4539d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f095e0f1f90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6eae85e810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6eae85ea10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f095e13a550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f095e6a2810&gt;]</pre>
 </div>
 
 </div>
