--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3977675690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5352ebe650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f397733bc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f397733be90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53532e2c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53532e2e50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f39778e85d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f39778e87d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f535388a610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f535388a810&gt;]</pre>
 </div>
 
 </div>
