--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd416b30190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e39f0f1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd415c7ce10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd415c7cfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e398abc90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e3959e810&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd41622f6d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd41622f8d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e39e59610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2e39ea6290&gt;]</pre>
 </div>
 
 </div>
